<?xml version="1.0"?>
<package format="2">
  <name>explore_lite</name>
  <version>2.1.1</version>

  <description>Lightweight frontier-based exploration.</description>

  <author email="giovani.diniz@raytheon.com">Giovani Del Nero Diniz</author>
  <maintainer email="giovani.diniz@raytheon.com">Giovani Del Nero Diniz</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>map_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf</depend>
  <depend>costmap_2d</depend>
  <depend>actionlib</depend>

  <test_depend>roslaunch</test_depend>
</package>
